MES-7082 fix welsh test check mark alignment (#262)
* MES-7082 fix welsh test check mark alignment

* re-align

--- a/src/theme/sass-partials/_checkbox.scss
+++ b/src/theme/sass-partials/_checkbox.scss
@@ -48,12 +48,13 @@
 
   &:checked + label:after {
     $checkmark-size: 24px;
+    $checkmark-offset: 14px;
     content: "";
     background: url("/assets/imgs/checkmark.png") no-repeat;
     background-size: $checkmark-size $checkmark-size;
     position: absolute;
-    left: 8%;
-    top: 25%;
+    left: 12px;
+    top: 12px;
     width: $checkmark-size;
     height: $checkmark-size;
   }
